--- a/src/app/modules/clients/components/home/home.component.html
+++ b/src/app/modules/clients/components/home/home.component.html
@@ -1,7 +1,14 @@
 <section class="section">
   <div class="container">
     <div class="column">
-      <h1 class="title">My clients</h1>
+      <h1 class="title">My clients
+        <button (click)="showAddComponent = !showAddComponent" class="button is-pulled-right is-primary">New client</button>
+      </h1>
+
+      <div *ngIf="showAddComponent">
+        <client-add></client-add>
+      </div>
+
       <client-card *ngFor="let client of clients$ | async" [client]="client"></client-card>
     </div>
   </div>
