--- a/src/app/modules/clients/components/client-add/client-add.component.html
+++ b/src/app/modules/clients/components/client-add/client-add.component.html
@@ -1,28 +1,30 @@
-<div class="field">
-  <label class="label">Client name</label>
-  <div class="control has-icons-left has-icons-right">
-    <input class="input is-success" type="text" placeholder="Client name">
-    <span class="icon is-small is-left">
-      <i class="fa fa-user"></i>
-    </span>
-    <span class="icon is-small is-right">
-      <i class="fa fa-check"></i>
-    </span>
+<form #addClientForm="ngForm" (ngSubmit)="save()">
+  <div class="field">
+    <label class="label">Client name</label>
+    <div class="control has-icons-left has-icons-right">
+      <input [(ngModel)]="client.name" #name="ngModel" name="name" class="input" type="text" placeholder="Client name" required>
+      <span class="icon is-small is-left">
+        <i class="fa fa-user"></i>
+      </span>
+      <span class="icon is-small is-right">
+        <i class="fa fa-check"></i>
+      </span>
+    </div>
+    <p *ngIf="name.invalid && (name.dirty || name.touched)" class="help is-danger">Please provide a Client name</p>
   </div>
-  <p class="help is-success">This name is available</p>
-</div>
 
-<div class="field">
-  <div class="control">
-    <textarea class="textarea" type="text" placeholder="Client bio  "></textarea>
+  <div class="field">
+    <div class="control">
+      <textarea [(ngModel)]="client.description" name="description" class="textarea" type="text" placeholder="Client bio"></textarea>
+    </div>
   </div>
-</div>
 
-<div class="field is-grouped">
-  <div class="control">
-    <button class="button is-link">Submit</button>
+  <div class="field is-grouped">
+    <div class="control">
+      <button [disabled]="!addClientForm.valid" class="button is-link" type="submit">Add client</button>
+    </div>
+    <div class="control">
+      <button (click)="cancel()" class="button is-text">Cancel</button>
+    </div>
   </div>
-  <div class="control">
-    <button class="button is-text">Cancel</button>
-  </div>
-</div>
+</form>
