feat: login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <toaster-container></toaster-container>
-<nav class="navbar is-light" role="navigation" aria-label="main navigation">
+
+<nav *ngIf="showNav" class="navbar is-light" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item">
       <!-- <img src="assets/img/logo.png"> -->
