--- a/src/app/modules/projects/components/project-details/project-details.component.html
+++ b/src/app/modules/projects/components/project-details/project-details.component.html
@@ -49,7 +49,7 @@
         <form #projectDetailsForm="ngForm" (ngSubmit)="save()">
           <div class="field">
             <label class="label">Project name</label>
-            <div class="control has-icons-left has-icons-right">
+            <div class="control">
               <input [(ngModel)]="project.name"
                       #name="ngModel"
                       name="name"
@@ -57,12 +57,6 @@
                       type="text"
                       placeholder="Project name"
                       required>
-              <span class="icon is-small is-left">
-                <i class="fa fa-user"></i>
-              </span>
-              <span class="icon is-small is-right">
-                <i class="fa fa-check"></i>
-              </span>
             </div>
             <p *ngIf="name.invalid && (name.dirty || name.touched)" class="help is-danger">Please provide a Project name</p>
           </div>
