--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -2,7 +2,12 @@
   <div class="columns">
     <div class="column"></div>
     <div class="column is-one-third">
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="has-text-centered">
+        <button (click)="setView('login')" class="button is-medium is-info">Login</button>
+        or
+        <button (click)="setView('register')" class="button is-medium is-info">Register</button>
+      </div>
+      <form *ngIf="view === 'login'" [formGroup]="loginForm" (ngSubmit)="onLogin()">
         <div class="field">
           <label class="label">Email address</label>
           <div class="control">
@@ -35,7 +40,61 @@
             </button>
           </div>
         </div>
-      </form>
+      </form><!-- /.Login form-->
+
+      <form *ngIf="view === 'register'" [formGroup]="registrationForm" (ngSubmit)="onRegister()">
+        <div class="field">
+          <label class="label">Name</label>
+          <div class="control">
+            <input formControlName="name"
+                    name="name"
+                    class="input"
+                    type="text"
+                    placeholder="Full name"
+                    required>
+          </div>
+        </div>
+        <div class="field">
+          <label class="label">Email address</label>
+          <div class="control">
+            <input formControlName="email"
+                    name="email"
+                    class="input"
+                    type="email"
+                    placeholder="Email address"
+                    required>
+          </div>
+        </div>
+        <div class="field">
+          <label class="label">Phone</label>
+          <div class="control">
+            <input formControlName="phone"
+                    name="phone"
+                    class="input"
+                    type="text"
+                    placeholder="Phone number">
+          </div>
+        </div>
+        <div class="field">
+          <label class="label">Password</label>
+          <div class="control">
+            <input formControlName="password"
+                    name="password"
+                    class="input"
+                    type="password"
+                    placeholder="Password"
+                    required>
+          </div>
+        </div>
+        <div class="field">
+          <div class="control">
+            <button [disabled]="!registrationForm.valid"
+                    class="button"
+                    type="submit">Register
+            </button>
+          </div>
+        </div>
+      </form><!-- /.Registation form-->
     </div>
     <div class="column"></div>
   </div>
