feat: logout done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <toaster-container></toaster-container>
 
-<nav *ngIf="showNav" class="navbar is-light" role="navigation" aria-label="main navigation">
+<nav *ngIf="isLoggedIn()" class="navbar is-light" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item">
       <!-- <img src="assets/img/logo.png"> -->
@@ -16,6 +16,21 @@
     <a routerLink="/clients" class="navbar-item">
       Clients
     </a>
+
+    <div class="navbar-end navbar-item has-dropdown is-hoverable">
+      <a class="navbar-link">
+        {{ currentUser.name }}
+      </a>
+      <div class="navbar-dropdown is-boxed is-right">
+        <a class="navbar-item" href="https://bulma.io/documentation/form/general/">
+          My profile
+        </a>
+        <hr class="navbar-divider">
+        <a class="navbar-item" (click)="logout()">
+          Logout
+        </a>
+      </div>
+    </div>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
       <span aria-hidden="true"></span>
